--- a/conformance/tests/tlsroute-mixed-termination-same-namespace.yaml
+++ b/conformance/tests/tlsroute-mixed-termination-same-namespace.yaml
@@ -45,10 +45,10 @@ spec:
   - abc.example.com
   rules:
   - backendRefs:
-    - name: tls-backend
-      port: 443
+    - name: tcp-backend
+      port: 8443
 ---
-# TLSRoute and service for the terminated MQTT service
+# TLSRoute and service for the terminated TCP service
 apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: TLSRoute
 metadata:
@@ -62,64 +62,6 @@ spec:
   - tls.example.com
   rules:
   - backendRefs:
-    - name: mqtt-backend
-      port: 1883
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mqtt-backend
-  namespace: gateway-conformance-infra
-spec:
-  selector:
-    app: mqtt-backend
-  ports:
-  - protocol: TCP
-    port: 1883
-    targetPort: 1883
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mqtt-backend
-  namespace: gateway-conformance-infra
-  labels:
-    app: mqtt-backend
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mqtt-backend
-  template:
-    metadata:
-      labels:
-        app: mqtt-backend
-    spec:
-      containers:
-      - name: mqtt-backend
-        # https://hub.docker.com/_/eclipse-mosquitto
-        image: docker.io/eclipse-mosquitto:2
-        volumeMounts:
-        - name: config
-          mountPath: /mosquitto/config/mosquitto.conf
-          subPath: mosquitto.conf
-        ports:
-        - containerPort: 1883
-        resources:
-          requests:
-            cpu: 10m
-      volumes:
-      - name: config
-        configMap:
-          name: mosquitto-config
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: mosquitto-config
-  namespace: gateway-conformance-infra
-data:
-  mosquitto.conf: |
-    listener 1883
-    allow_anonymous true
+    - name: tcp-backend
+      port: 3000
 ---
