--- a/conformance/tests/tlsroute-terminate-simple-same-namespace.yaml
+++ b/conformance/tests/tlsroute-terminate-simple-same-namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: TLSRoute
 metadata:
-  name: gateway-conformance-mqtt-test
+  name: tlsroute-terminated-test
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -11,8 +11,8 @@ spec:
   - tls.example.com
   rules:
   - backendRefs:
-    - name: mqtt-backend
-      port: 1883
+    - name: tcp-backend
+      port: 3000 # Plain text port
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
@@ -22,8 +22,8 @@ metadata:
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
-  - name: mqtt
-    port: 8883
+  - name: tlsterminate
+    port: 8443
     protocol: TLS
     hostname: tls.example.com
     allowedRoutes:
@@ -36,60 +36,3 @@ spec:
       certificateRefs:
       - name: tls-terminate-checks-certificate
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: mqtt-backend
-  namespace: gateway-conformance-infra
-spec:
-  selector:
-    app: mqtt-backend
-  ports:
-  - protocol: TCP
-    port: 1883
-    targetPort: 1883
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mqtt-backend
-  namespace: gateway-conformance-infra
-  labels:
-    app: mqtt-backend
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mqtt-backend
-  template:
-    metadata:
-      labels:
-        app: mqtt-backend
-    spec:
-      containers:
-      - name: mqtt-backend
-        # https://hub.docker.com/_/eclipse-mosquitto
-        image: docker.io/eclipse-mosquitto:2
-        volumeMounts:
-        - name: config
-          mountPath: /mosquitto/config/mosquitto.conf
-          subPath: mosquitto.conf
-        ports:
-        - containerPort: 1883
-        resources:
-          requests:
-            cpu: 10m
-      volumes:
-      - name: config
-        configMap:
-          name: mosquitto-config
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: mosquitto-config
-  namespace: gateway-conformance-infra
-data:
-  mosquitto.conf: |
-    listener 1883
-    allow_anonymous true
