--- a/conformance/tests/httproute-cors.yaml
+++ b/conformance/tests/httproute-cors.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: cors-1
+  name: cors-multiple-origins-methods-headers
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -35,7 +35,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: cors-2   # test CORS with allowMethods: ["*"] and without allowCredentials=true
+  name: cors-wildcard-methods   # test CORS with allowMethods: ["*"] and without allowCredentials=true
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
