TLSRoute: Add conformance test TCPRoute being invalide for TLS listener with mode Terminate

--- a/conformance/tests/tlsroute-listener-terminate-supported-kinds.yaml
+++ b/conformance/tests/tlsroute-listener-terminate-supported-kinds.yaml
@@ -15,6 +15,7 @@ spec:
         namespaces:
           from: Same
         kinds:
+          - kind: TCPRoute
           - kind: TLSRoute
       tls:
         mode: Terminate
