--- a/conformance/tests/httproute-cors.yaml
+++ b/conformance/tests/httproute-cors.yaml
@@ -35,7 +35,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: cors-wildcard-methods   # test CORS with allowMethods: ["*"] and without allowCredentials=true
+  name: cors-wildcard-methods 
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -69,7 +69,8 @@ spec:
       cors:
         allowOrigins:
         - "*"
-        allowMethods: ["*"]
+        allowMethods: ["PUT"]
+        allowCredentials: false
     matches:
     - path:
         type: PathPrefix
@@ -77,3 +78,30 @@ spec:
     backendRefs:
     - name: infra-backend-v1
       port: 8080
+---
+# Test the usage of wildcards on authenticated requests and the proper RFC response
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: cors-wildcard-methods-headers-auth 
+  namespace: gateway-conformance-infra
+spec:
+  parentRefs:
+  - name: same-namespace
+  rules:
+  - filters:
+    - type: CORS
+      cors:
+        allowOrigins:
+        - "https://other.foo.com"
+        allowMethods: ["*"]
+        allowHeaders: ["*"]
+        allowCredentials: true
+    matches:
+    - path:
+        type: PathPrefix
+        value: /cors-wildcard-methods-headers
+    backendRefs:
+    - name: infra-backend-v1
+      port: 8080
+---
