--- a/conformance/tests/listenerset-allowed-routes-supported-kinds.yaml
+++ b/conformance/tests/listenerset-allowed-routes-supported-kinds.yaml
@@ -71,7 +71,7 @@ spec:
     name: listenerset-test-allowed-routes-supported-kinds
     namespace: gateway-conformance-infra
   hostnames:
-  - abc.example.com
+  - listener-set-listener-allowed-routes-http-only.com
   rules:
   - backendRefs:
     - name: tls-backend
