--- a/conformance/tests/listenerset-allowed-routes-supported-kinds.yaml
+++ b/conformance/tests/listenerset-allowed-routes-supported-kinds.yaml
@@ -29,50 +29,12 @@ spec:
     name: gateway-with-listener-sets-test-supported-route-kinds
     namespace: gateway-conformance-infra
   listeners:
-  - name: listener-set-listener-allowed-routes-http-only
-    port: 80
-    protocol: HTTP
-    hostname: "listener-set-listener-allowed-routes-http-only.com"
+  - name: listener-set-listener-allowed-routes-tls-only
+    port: 443
+    protocol: TLS
+    hostname: "listener-set-listener-allowed-routes-tls-only.com"
     allowedRoutes:
       namespaces:
         from: All
       kinds:
       - kind: HTTPRoute
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: listener-sets-test-supported-route-kinds-http-route
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-test-allowed-routes-supported-kinds
-    namespace: gateway-conformance-infra
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /http-route
-    backendRefs:
-    - name: infra-backend-v1
-      port: 8080
----
-apiVersion: gateway.networking.k8s.io/v1alpha3
-kind: TLSRoute
-metadata:
-  name: listener-sets-test-supported-route-kinds-tls-route
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-test-allowed-routes-supported-kinds
-    namespace: gateway-conformance-infra
-  hostnames:
-  - listener-set-listener-allowed-routes-http-only.com
-  rules:
-  - backendRefs:
-    - name: tls-backend
-      port: 443
