conformance: Add listenerSet conformance tests to match the GEP (#4445)
* AllowedListeners is not specified on the parent Gateway

* ListenerSets are not allowed on the parent Gateway

* ListenerSets are allowed only from the same namespace

* ListenerSets are allowed from namespaces that have the appropriate labels

* cleanup

* clarify namespace

* udpate helpers

* clearer names

* Hostname conflict x4 tests

* Protocol conflict x4 tests

* update conflicted tests

* update helpers

* more fixes

* Reference grant x2

* update tests to not require httproute

* cleanup

* helper changes

* ListenerSetAllowedRoutesNamespaces

* ListenerSetAllowedRoutesSupportedKinds

* cleanup

* ListenerSetHTTPRouting

* more cleanup

* cleanup again

* address changes

* bump version

* address comments

* fix supported route kinds

* fix manifest

* remove ListenerSetAllowedRoutesSupportedKinds for now

--- a/conformance/tests/listenerset-protocol-conflict.yaml
+++ b/conformance/tests/listenerset-protocol-conflict.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: gateway-with-listenerset-http-listener
+  name: gateway-with-listenerset-protocol-conflict
   namespace: gateway-conformance-infra
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
@@ -16,127 +16,117 @@ spec:
     allowedRoutes:
       namespaces:
         from: All
-  - name: protocol-conflict-listener-1
+  # The following listener should be accepted based on listener precedence
+  - name: protocol-conflict-with-gateway-listener
     port: 80
     protocol: HTTP
-    hostname: "protocol-conflict-listener-1.com"
+    hostname: "protocol-conflict-with-gateway-listener.com"
     allowedRoutes:
       namespaces:
         from: All
 ---
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: gateway-route
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - name: gateway-with-listenerset-http-listener
-    namespace: gateway-conformance-infra
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /gateway-route
-    backendRefs:
-    - name: infra-backend-v1
-      port: 8080
----
+# The listener `protocol-conflict-with-gateway-listener` should be rejected but the listenerSet should be accepted since it has other valid listeners
 apiVersion: gateway.networking.x-k8s.io/v1alpha1
 kind: XListenerSet
 metadata:
-  name: listenerset-with-conflict-1
+  name: listenerset-with-protocol-conflict-with-gateway-1
   namespace: gateway-conformance-infra
 spec:
   parentRef:
     kind: Gateway
     group: gateway.networking.k8s.io
-    name: gateway-with-listenerset-http-listener
+    name: gateway-with-listenerset-protocol-conflict
     namespace: gateway-conformance-infra
   listeners:
-  - name: listenerset-1-listener
+  - name: listener-set-1-listener
     port: 80
     protocol: HTTP
-    hostname: "listenerset-1-listener.com"
+    hostname: "listener-set-1-listener.com"
     allowedRoutes:
       namespaces:
         from: All
-  - name: protocol-conflict-listener-1
+  # The following listener should be rejected since it conflicts with the gateway listener
+  - name: protocol-conflict-with-gateway-listener
     port: 80
     protocol: TCP
     allowedRoutes:
       namespaces:
         from: All
-  - name: protocol-conflict-listener-2
+  # The following listener should be accepted based on listener precedence
+  - name: protocol-conflict-with-listener-set-listener
     port: 80
     protocol: HTTP
-    hostname: "protocol-conflict-listener-2.com"
+    hostname: "protocol-conflict-with-listener-set-listener.com"
     allowedRoutes:
       namespaces:
         from: All
 ---
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: listenerset-with-conflict-1-route
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-with-conflict-1
-    namespace: gateway-conformance-infra
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /listenerset-1-route
-    backendRefs:
-    - name: infra-backend-v2
-      port: 8080
----
+# This listenerSet should not be accepted since its only listener `protocol-conflict-with-gateway-listener` is rejected
 apiVersion: gateway.networking.x-k8s.io/v1alpha1
 kind: XListenerSet
 metadata:
-  name: listenerset-with-conflict-2
+  name: listenerset-with-protocol-conflict-with-gateway-2
   namespace: gateway-conformance-infra
 spec:
   parentRef:
     kind: Gateway
     group: gateway.networking.k8s.io
-    name: gateway-with-listenerset-http-listener
+    name: gateway-with-listenerset-protocol-conflict
     namespace: gateway-conformance-infra
   listeners:
-  - name: listenerset-2-listener
-    port: 80
-    protocol: HTTP
-    hostname: "listenerset-2-listener.com"
-    allowedRoutes:
-      namespaces:
-        from: All
-  - name: protocol-conflict-listener-2
+  # The following listener should be rejected since it conflicts with the gateway listener
+  - name: protocol-conflict-with-gateway-listener
     port: 80
     protocol: TCP
     allowedRoutes:
       namespaces:
         from: All
 ---
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
+# The listener `protocol-conflict-with-listener-set-listener` should be rejected but the listenerSet should be accepted since it has other valid listeners
+apiVersion: gateway.networking.x-k8s.io/v1alpha1
+kind: XListenerSet
 metadata:
-  name: listenerset-with-conflict-2-route
+  name: listenerset-with-protocol-conflict-with-listener-set-1
   namespace: gateway-conformance-infra
 spec:
-  parentRefs:
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-with-conflict-2
+  parentRef:
+    kind: Gateway
+    group: gateway.networking.k8s.io
+    name: gateway-with-listenerset-protocol-conflict
     namespace: gateway-conformance-infra
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /listenerset-2-route
-    backendRefs:
-    - name: infra-backend-v3
-      port: 8080
+  listeners:
+  - name: listener-set-2-listener
+    port: 80
+    protocol: HTTP
+    hostname: "listener-set-2-listener.com"
+    allowedRoutes:
+      namespaces:
+        from: All
+  # The following listener should be rejected since it conflicts with another listenerSet's listener
+  - name: protocol-conflict-with-listener-set-listener
+    port: 80
+    protocol: TCP
+    allowedRoutes:
+      namespaces:
+        from: All
+---
+# This listenerSet should not be accepted since its only listener `protocol-conflict-with-listener-set-listener` is rejected
+apiVersion: gateway.networking.x-k8s.io/v1alpha1
+kind: XListenerSet
+metadata:
+  name: listenerset-with-protocol-conflict-with-listener-set-2
+  namespace: gateway-conformance-infra
+spec:
+  parentRef:
+    kind: Gateway
+    group: gateway.networking.k8s.io
+    name: gateway-with-listenerset-protocol-conflict
+    namespace: gateway-conformance-infra
+  listeners:
+  # The following listener should be rejected since it conflicts with another listenerSet's listener
+  - name: protocol-conflict-with-listener-set-listener
+    port: 80
+    protocol: TCP
+    allowedRoutes:
+      namespaces:
+        from: All
