--- a/config/crd/standard/gateway.networking.k8s.io_listenersets.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_listenersets.yaml
@@ -4,19 +4,19 @@ metadata:
   annotations:
     api-approved.kubernetes.io: https://github.com/kubernetes-sigs/gateway-api/pull/3328
     gateway.networking.k8s.io/bundle-version: v1.4.1
-    gateway.networking.k8s.io/channel: experimental
-  name: xlistenersets.gateway.networking.x-k8s.io
+    gateway.networking.k8s.io/channel: standard
+  name: listenersets.gateway.networking.k8s.io
 spec:
-  group: gateway.networking.x-k8s.io
+  group: gateway.networking.k8s.io
   names:
     categories:
     - gateway-api
-    kind: XListenerSet
-    listKind: XListenerSetList
-    plural: xlistenersets
+    kind: ListenerSet
+    listKind: ListenerSetList
+    plural: listenersets
     shortNames:
     - lset
-    singular: xlistenerset
+    singular: listenerset
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -29,11 +29,11 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
-    name: v1alpha1
+    name: v1
     schema:
       openAPIV3Schema:
         description: |-
-          XListenerSet defines a set of additional listeners to attach to an existing Gateway.
+          ListenerSet defines a set of additional listeners to attach to an existing Gateway.
           This resource provides a mechanism to merge multiple listeners into a single Gateway.
 
           The parent Gateway must explicitly allow ListenerSet attachment through its
