update conformance tests

--- a/conformance/tests/listenerset-allowed-namespace-none.yaml
+++ b/conformance/tests/listenerset-allowed-namespace-none.yaml
@@ -18,8 +18,8 @@ spec:
       from: None
 ---
 # This listenerSet should not be accepted since the Gateway does not allow ListenerSets via `allowedListeners`
-apiVersion: gateway.networking.x-k8s.io/v1alpha1
-kind: XListenerSet
+apiVersion: gateway.networking.k8s.io/v1
+kind: ListenerSet
 metadata:
   name: listenerset-not-allowed
   namespace: gateway-conformance-infra
