--- a/conformance/tests/listenerset-allowed-namespace-selector.yaml
+++ b/conformance/tests/listenerset-allowed-namespace-selector.yaml
@@ -29,8 +29,8 @@ metadata:
     allowed: ns
 ---
 # This listenerSet should be accepted since it is in the namespace that matches the label selector defined in `allowedListeners`
-apiVersion: gateway.networking.x-k8s.io/v1alpha1
-kind: XListenerSet
+apiVersion: gateway.networking.k8s.io/v1
+kind: ListenerSet
 metadata:
   name: listenerset-in-selected-namespace
   namespace: gateway-api-listenerset-selector-allowed-ns
@@ -56,8 +56,8 @@ metadata:
   name: gateway-api-listenerset-selector-not-allowed-ns
 ---
 # This listenerSet should not be accepted since it is not in the namespace that matches the label selector defined in `allowedListeners`
-apiVersion: gateway.networking.x-k8s.io/v1alpha1
-kind: XListenerSet
+apiVersion: gateway.networking.k8s.io/v1
+kind: ListenerSet
 metadata:
   name: listenerset-not-in-selected-namespace
   namespace: gateway-api-listenerset-selector-not-allowed-ns
