--- a/conformance/tests/listenerset-reference-grant.yaml
+++ b/conformance/tests/listenerset-reference-grant.yaml
@@ -37,8 +37,8 @@ spec:
   - group: ""
     kind: Secret
 ---
-apiVersion: gateway.networking.x-k8s.io/v1alpha1
-kind: XListenerSet
+apiVersion: gateway.networking.k8s.io/v1
+kind: ListenerSet
 metadata:
   name: listenerset-with-reference-grant
   namespace: gateway-conformance-infra
@@ -70,8 +70,8 @@ metadata:
   namespace: gateway-conformance-web-backend
 spec:
   from:
-  - group: gateway.networking.x-k8s.io
-    kind: XListenerSet
+  - group: gateway.networking.k8s.io
+    kind: ListenerSet
     namespace: gateway-conformance-infra
   to:
   - group: ""
@@ -82,8 +82,8 @@ kind: Namespace
 metadata:
   name: gateway-api-listener-sets-test-reference-grant-ns
 ---
-apiVersion: gateway.networking.x-k8s.io/v1alpha1
-kind: XListenerSet
+apiVersion: gateway.networking.k8s.io/v1
+kind: ListenerSet
 metadata:
   name: listenerset-without-reference-grant
   namespace: gateway-api-listener-sets-test-reference-grant-ns
