--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -138,14 +138,14 @@ spec:
               allowedListeners:
                 description: |-
                   AllowedListeners defines which ListenerSets can be attached to this Gateway.
-                  While this feature is experimental, the default value is to allow no ListenerSets.
+                  The default value is to allow no ListenerSets.
                 properties:
                   namespaces:
                     default:
                       from: None
                     description: |-
                       Namespaces defines which namespaces ListenerSets can be attached to this Gateway.
-                      While this feature is experimental, the default value is to allow no ListenerSets.
+                      The default value is to allow no ListenerSets.
                     properties:
                       from:
                         default: None
@@ -158,7 +158,7 @@ spec:
                           * All: ListenerSets in all namespaces may be attached to this Gateway.
                           * None: Only listeners defined in the Gateway's spec are allowed
 
-                          While this feature is experimental, the default value None
+                          The default value None
                         enum:
                         - All
                         - Selector
@@ -1790,14 +1790,14 @@ spec:
               allowedListeners:
                 description: |-
                   AllowedListeners defines which ListenerSets can be attached to this Gateway.
-                  While this feature is experimental, the default value is to allow no ListenerSets.
+                  The default value is to allow no ListenerSets.
                 properties:
                   namespaces:
                     default:
                       from: None
                     description: |-
                       Namespaces defines which namespaces ListenerSets can be attached to this Gateway.
-                      While this feature is experimental, the default value is to allow no ListenerSets.
+                      The default value is to allow no ListenerSets.
                     properties:
                       from:
                         default: None
@@ -1810,7 +1810,7 @@ spec:
                           * All: ListenerSets in all namespaces may be attached to this Gateway.
                           * None: Only listeners defined in the Gateway's spec are allowed
 
-                          While this feature is experimental, the default value None
+                          The default value None
                         enum:
                         - All
                         - Selector
