Unify gep-1767 and httproute_types.go
It seems that not all changes in GEP 1767 were correctly reflected in
apis/v1/httproute_types.go. This is now fixed.

Signed-off-by: Damian Sawicki <dsawicki@google.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -503,12 +503,12 @@ spec:
 
                                         A wildcard indicates that the requests with all HTTP headers are allowed.
                                         The `Access-Control-Allow-Headers` response header can only use `*`
-                                        wildcard as value when the `AllowCredentials` field is false or omitted.
+                                        wildcard as value when the request is not credentialed.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Headers` response header. When
                                         also the `AllowCredentials` field is true and `AllowHeaders` field
-                                        specified with the `*` wildcard, the gateway must specify one or more
+                                        is specified with the `*` wildcard, the gateway must specify one or more
                                         HTTP headers in the value of the `Access-Control-Allow-Headers` response
                                         header. The value of the header `Access-Control-Allow-Headers` is same as
                                         the `Access-Control-Request-Headers` header provided by the client. If
@@ -566,8 +566,9 @@ spec:
                                         `Access-Control-Allow-Methods`, it will present an error on the client
                                         side.
 
-                                        The `Access-Control-Allow-Methods` response header can only use `*`
-                                        wildcard as value when the `AllowCredentials` field is false or omitted.
+                                        The `Access-Control-Allow-Methods` response header should use `*`
+                                        wildcard as value if config contains the wildcard "*" in allowMethods
+                                        unless the request is credentialed.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -645,6 +646,16 @@ spec:
                                         the CORS headers. The cross-origin request fails on the client side.
                                         Therefore, the client doesn't attempt the actual cross-origin request.
 
+                                        Conversely, if the request `Origin` matches one of the configured
+                                        allowed origins, the gateway sets the response header
+                                        `Access-Control-Allow-Origin` to the same value as the `Origin`
+                                        header provided by the client.
+
+                                        When config has the wildcard ("*") in allowOrigins, and the request
+                                        is not credentialed (e.g., it is a preflight request), the
+                                        `Access-Control-Allow-Origin` response header contains the
+                                        wildcard as well.
+
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Origin` response header. When
                                         also the `AllowCredentials` field is true and `AllowOrigins` field
@@ -704,6 +715,10 @@ spec:
                                         to clients. The `Access-Control-Expose-Headers` response header can only
                                         use `*` wildcard as value when the request is not credentialed.
 
+                                        When the `exposeHeaders` config field contains the "*" wildcard and
+                                        the request is credentialed, the gateway cannot use the `*` wildcard in
+                                        the `Access-Control-Expose-Headers` response header.
+
                                         Support: Extended
                                       items:
                                         description: |-
@@ -738,6 +753,9 @@ spec:
 
                                         The default value of `Access-Control-Max-Age` response header is 5
                                         (seconds).
+
+                                        When the `MaxAge` field is unspecified, the gateway sets the response
+                                        header "Access-Control-Max-Age: 5" by default.
                                       format: int32
                                       minimum: 1
                                       type: integer
@@ -2006,12 +2024,12 @@ spec:
 
                                   A wildcard indicates that the requests with all HTTP headers are allowed.
                                   The `Access-Control-Allow-Headers` response header can only use `*`
-                                  wildcard as value when the `AllowCredentials` field is false or omitted.
+                                  wildcard as value when the request is not credentialed.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Headers` response header. When
                                   also the `AllowCredentials` field is true and `AllowHeaders` field
-                                  specified with the `*` wildcard, the gateway must specify one or more
+                                  is specified with the `*` wildcard, the gateway must specify one or more
                                   HTTP headers in the value of the `Access-Control-Allow-Headers` response
                                   header. The value of the header `Access-Control-Allow-Headers` is same as
                                   the `Access-Control-Request-Headers` header provided by the client. If
@@ -2069,8 +2087,9 @@ spec:
                                   `Access-Control-Allow-Methods`, it will present an error on the client
                                   side.
 
-                                  The `Access-Control-Allow-Methods` response header can only use `*`
-                                  wildcard as value when the `AllowCredentials` field is false or omitted.
+                                  The `Access-Control-Allow-Methods` response header should use `*`
+                                  wildcard as value if config contains the wildcard "*" in allowMethods
+                                  unless the request is credentialed.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -2148,6 +2167,16 @@ spec:
                                   the CORS headers. The cross-origin request fails on the client side.
                                   Therefore, the client doesn't attempt the actual cross-origin request.
 
+                                  Conversely, if the request `Origin` matches one of the configured
+                                  allowed origins, the gateway sets the response header
+                                  `Access-Control-Allow-Origin` to the same value as the `Origin`
+                                  header provided by the client.
+
+                                  When config has the wildcard ("*") in allowOrigins, and the request
+                                  is not credentialed (e.g., it is a preflight request), the
+                                  `Access-Control-Allow-Origin` response header contains the
+                                  wildcard as well.
+
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Origin` response header. When
                                   also the `AllowCredentials` field is true and `AllowOrigins` field
@@ -2207,6 +2236,10 @@ spec:
                                   to clients. The `Access-Control-Expose-Headers` response header can only
                                   use `*` wildcard as value when the request is not credentialed.
 
+                                  When the `exposeHeaders` config field contains the "*" wildcard and
+                                  the request is credentialed, the gateway cannot use the `*` wildcard in
+                                  the `Access-Control-Expose-Headers` response header.
+
                                   Support: Extended
                                 items:
                                   description: |-
@@ -2241,6 +2274,9 @@ spec:
 
                                   The default value of `Access-Control-Max-Age` response header is 5
                                   (seconds).
+
+                                  When the `MaxAge` field is unspecified, the gateway sets the response
+                                  header "Access-Control-Max-Age: 5" by default.
                                 format: int32
                                 minimum: 1
                                 type: integer
@@ -4714,12 +4750,12 @@ spec:
 
                                         A wildcard indicates that the requests with all HTTP headers are allowed.
                                         The `Access-Control-Allow-Headers` response header can only use `*`
-                                        wildcard as value when the `AllowCredentials` field is false or omitted.
+                                        wildcard as value when the request is not credentialed.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Headers` response header. When
                                         also the `AllowCredentials` field is true and `AllowHeaders` field
-                                        specified with the `*` wildcard, the gateway must specify one or more
+                                        is specified with the `*` wildcard, the gateway must specify one or more
                                         HTTP headers in the value of the `Access-Control-Allow-Headers` response
                                         header. The value of the header `Access-Control-Allow-Headers` is same as
                                         the `Access-Control-Request-Headers` header provided by the client. If
@@ -4777,8 +4813,9 @@ spec:
                                         `Access-Control-Allow-Methods`, it will present an error on the client
                                         side.
 
-                                        The `Access-Control-Allow-Methods` response header can only use `*`
-                                        wildcard as value when the `AllowCredentials` field is false or omitted.
+                                        The `Access-Control-Allow-Methods` response header should use `*`
+                                        wildcard as value if config contains the wildcard "*" in allowMethods
+                                        unless the request is credentialed.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -4856,6 +4893,16 @@ spec:
                                         the CORS headers. The cross-origin request fails on the client side.
                                         Therefore, the client doesn't attempt the actual cross-origin request.
 
+                                        Conversely, if the request `Origin` matches one of the configured
+                                        allowed origins, the gateway sets the response header
+                                        `Access-Control-Allow-Origin` to the same value as the `Origin`
+                                        header provided by the client.
+
+                                        When config has the wildcard ("*") in allowOrigins, and the request
+                                        is not credentialed (e.g., it is a preflight request), the
+                                        `Access-Control-Allow-Origin` response header contains the
+                                        wildcard as well.
+
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Origin` response header. When
                                         also the `AllowCredentials` field is true and `AllowOrigins` field
@@ -4915,6 +4962,10 @@ spec:
                                         to clients. The `Access-Control-Expose-Headers` response header can only
                                         use `*` wildcard as value when the request is not credentialed.
 
+                                        When the `exposeHeaders` config field contains the "*" wildcard and
+                                        the request is credentialed, the gateway cannot use the `*` wildcard in
+                                        the `Access-Control-Expose-Headers` response header.
+
                                         Support: Extended
                                       items:
                                         description: |-
@@ -4949,6 +5000,9 @@ spec:
 
                                         The default value of `Access-Control-Max-Age` response header is 5
                                         (seconds).
+
+                                        When the `MaxAge` field is unspecified, the gateway sets the response
+                                        header "Access-Control-Max-Age: 5" by default.
                                       format: int32
                                       minimum: 1
                                       type: integer
@@ -6217,12 +6271,12 @@ spec:
 
                                   A wildcard indicates that the requests with all HTTP headers are allowed.
                                   The `Access-Control-Allow-Headers` response header can only use `*`
-                                  wildcard as value when the `AllowCredentials` field is false or omitted.
+                                  wildcard as value when the request is not credentialed.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Headers` response header. When
                                   also the `AllowCredentials` field is true and `AllowHeaders` field
-                                  specified with the `*` wildcard, the gateway must specify one or more
+                                  is specified with the `*` wildcard, the gateway must specify one or more
                                   HTTP headers in the value of the `Access-Control-Allow-Headers` response
                                   header. The value of the header `Access-Control-Allow-Headers` is same as
                                   the `Access-Control-Request-Headers` header provided by the client. If
@@ -6280,8 +6334,9 @@ spec:
                                   `Access-Control-Allow-Methods`, it will present an error on the client
                                   side.
 
-                                  The `Access-Control-Allow-Methods` response header can only use `*`
-                                  wildcard as value when the `AllowCredentials` field is false or omitted.
+                                  The `Access-Control-Allow-Methods` response header should use `*`
+                                  wildcard as value if config contains the wildcard "*" in allowMethods
+                                  unless the request is credentialed.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -6359,6 +6414,16 @@ spec:
                                   the CORS headers. The cross-origin request fails on the client side.
                                   Therefore, the client doesn't attempt the actual cross-origin request.
 
+                                  Conversely, if the request `Origin` matches one of the configured
+                                  allowed origins, the gateway sets the response header
+                                  `Access-Control-Allow-Origin` to the same value as the `Origin`
+                                  header provided by the client.
+
+                                  When config has the wildcard ("*") in allowOrigins, and the request
+                                  is not credentialed (e.g., it is a preflight request), the
+                                  `Access-Control-Allow-Origin` response header contains the
+                                  wildcard as well.
+
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Origin` response header. When
                                   also the `AllowCredentials` field is true and `AllowOrigins` field
@@ -6418,6 +6483,10 @@ spec:
                                   to clients. The `Access-Control-Expose-Headers` response header can only
                                   use `*` wildcard as value when the request is not credentialed.
 
+                                  When the `exposeHeaders` config field contains the "*" wildcard and
+                                  the request is credentialed, the gateway cannot use the `*` wildcard in
+                                  the `Access-Control-Expose-Headers` response header.
+
                                   Support: Extended
                                 items:
                                   description: |-
@@ -6452,6 +6521,9 @@ spec:
 
                                   The default value of `Access-Control-Max-Age` response header is 5
                                   (seconds).
+
+                                  When the `MaxAge` field is unspecified, the gateway sets the response
+                                  header "Access-Control-Max-Age: 5" by default.
                                 format: int32
                                 minimum: 1
                                 type: integer
