--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -566,9 +566,10 @@ spec:
                                         `Access-Control-Allow-Methods`, it will present an error on the client
                                         side.
 
-                                        The `Access-Control-Allow-Methods` response header should use `*`
-                                        wildcard as value if config contains the wildcard "*" in allowMethods
-                                        unless the request is credentialed.
+                                        If config contains the wildcard "*" in allowMethods and the request is
+                                        not credentialed, the `Access-Control-Allow-Methods` response header
+                                        can either use the `*` wildcard or the value of
+                                        Access-Control-Request-Method from the request.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -2087,9 +2088,10 @@ spec:
                                   `Access-Control-Allow-Methods`, it will present an error on the client
                                   side.
 
-                                  The `Access-Control-Allow-Methods` response header should use `*`
-                                  wildcard as value if config contains the wildcard "*" in allowMethods
-                                  unless the request is credentialed.
+                                  If config contains the wildcard "*" in allowMethods and the request is
+                                  not credentialed, the `Access-Control-Allow-Methods` response header
+                                  can either use the `*` wildcard or the value of
+                                  Access-Control-Request-Method from the request.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -4813,9 +4815,10 @@ spec:
                                         `Access-Control-Allow-Methods`, it will present an error on the client
                                         side.
 
-                                        The `Access-Control-Allow-Methods` response header should use `*`
-                                        wildcard as value if config contains the wildcard "*" in allowMethods
-                                        unless the request is credentialed.
+                                        If config contains the wildcard "*" in allowMethods and the request is
+                                        not credentialed, the `Access-Control-Allow-Methods` response header
+                                        can either use the `*` wildcard or the value of
+                                        Access-Control-Request-Method from the request.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Methods` response header. When
@@ -6334,9 +6337,10 @@ spec:
                                   `Access-Control-Allow-Methods`, it will present an error on the client
                                   side.
 
-                                  The `Access-Control-Allow-Methods` response header should use `*`
-                                  wildcard as value if config contains the wildcard "*" in allowMethods
-                                  unless the request is credentialed.
+                                  If config contains the wildcard "*" in allowMethods and the request is
+                                  not credentialed, the `Access-Control-Allow-Methods` response header
+                                  can either use the `*` wildcard or the value of
+                                  Access-Control-Request-Method from the request.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Methods` response header. When
